--- a/AutoCADIODemoWebApp/Content/Site.css
+++ b/AutoCADIODemoWebApp/Content/Site.css
@@ -17,7 +17,7 @@ body {
 {
     width:100%;
     height:15px;
-    border:1px solid #000;
+    border:none;
     overflow:hidden; 
 }
 
@@ -221,7 +221,7 @@ ul#menu li.selected a {
 ----------------------------------------------------------*/
 
 fieldset {
-    border: 1px solid #ddd;
+    border: none;
     padding: 0 1.4em 1.4em 1.4em;
     margin: 0 0 1.5em 0;
 }
@@ -368,4 +368,33 @@ div#title {
 
 .tri-state {
     width: 6em;
+}
+
+/* button style
+----------------------------------------------------------*/
+
+.btn {
+  background: #ebbb4c;
+  background-image: -webkit-linear-gradient(top, #ebbb4c, #eb8e1d);
+  background-image: -moz-linear-gradient(top, #ebbb4c, #eb8e1d);
+  background-image: -ms-linear-gradient(top, #ebbb4c, #eb8e1d);
+  background-image: -o-linear-gradient(top, #ebbb4c, #eb8e1d);
+  background-image: linear-gradient(to bottom, #ebbb4c, #eb8e1d);
+  -webkit-border-radius: 17;
+  -moz-border-radius: 17;
+  border-radius: 17px;
+  -webkit-box-shadow: 0px 3px 6px #666666;
+  -moz-box-shadow: 0px 3px 6px #666666;
+  box-shadow: 0px 3px 6px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 12px 20px 12px 20px;
+  border: solid #ffffff 3px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #f0b865;
+  text-decoration: none;
 }
