changed background color

--- a/AutoCADIODemoWebApp/Views/Shared/_Layout.cshtml
+++ b/AutoCADIODemoWebApp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-2.5.3.js")" type="text/javascript"></script>
 </head>
-<body style="background-image:url('@Url.Content("~/Images/WoodVertical.jpg")');background-repeat: no-repeat">
+<body style="background-color:#ebbb4c">
     <div style="width: 100%;margin-left: 5px;margin-right: 5px;">
         <section style="padding: 30px 30px 15px 30px;">
             @RenderBody()
