--- a/AutoCADIODemoWebApp/Views/Shared/_Layout.cshtml
+++ b/AutoCADIODemoWebApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,7 +7,7 @@
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-2.5.3.js")" type="text/javascript"></script>
 </head>
-<body style="background-color:#ebbb4c">
+<body style="background-color:#CC5500;">
     <div style="width: 100%;margin-left: 5px;margin-right: 5px;">
         <section style="padding: 30px 30px 15px 30px;">
             @RenderBody()
