--- a/AutoCADIODemoWebApp/Views/Home/Index.cshtml
+++ b/AutoCADIODemoWebApp/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model MvcApplication2.Models.ClosetModel
 
-<link rel="stylesheet" href="https://developer.api.autodesk.com/viewingservice/v1/viewers/style.css" type="text/css"/>
-<script src="https://developer.api.autodesk.com/viewingservice/v1/viewers/viewer3D.min.js"></script>
+<link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=v3.3" type="text/css"/>
+<script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/three.min.js"></script>
+<script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js?v=v3.3"></script>
 <script src="Scripts/jquery-1.7.1.min.js"></script>
 <script src="Scripts/jquery-ui-1.8.20.min.js"></script>
 <script type="text/javascript" src= "Scripts/View-Data.js" ></script>
@@ -14,7 +15,10 @@
                     <img src="@Url.Content("~/Images/autodesklogo.png")"/>
                 </td>
                 <td style="margin: 0;padding: 0;width:100%;height:100%;border:hidden;">
-                   <h1>Make your closet</h1>
+                   <h1>Make Your Bureau</h1>
+                </td>
+                <td style="border:hidden;vertical-align:top">
+                    <a href="https://github.com/Autodesk-Forge/design.automation-asp.net-cabinet-sample" target="_blank"><img src="@Url.Content("~/Images/github.png")" /></a>
                 </td>
             </tr>
         </table>
