--- a/AutoCADIODemoWebApp/Views/Home/Index.cshtml
+++ b/AutoCADIODemoWebApp/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model MvcApplication2.Models.ClosetModel
 
-<link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=v3.3" type="text/css"/>
+<link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/style.min.css?v=5.0" type="text/css"/>
 <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/three.min.js"></script>
-<script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js?v=v3.3"></script>
+<script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js?v=5.0"></script>
 <script src="Scripts/jquery-1.7.1.min.js"></script>
 <script src="Scripts/jquery-ui-1.8.20.min.js"></script>
 <script type="text/javascript" src= "Scripts/View-Data.js" ></script>
